--- a/index.html
+++ b/index.html
@@ -1,1 +1,18 @@
+<!DOCTYPE html>
+<html>
+<head>
+<title>HTML, CSS and JavaScript demo</title>
+</head>
+<body>
+<!-- Start your code here -->
 
+<script>
+    document.write("Это JavaScript!");
+    </script>
+    <hr>
+    <p class="lw"> привет
+    </p>
+
+<!-- End your code here -->
+</body>
+</html>
