--- a/index.html
+++ b/index.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <link rel="stylesheet" href="style.css">
 <title>HTML, CSS and JavaScript demo</title>
 </head>
 <body>
 <!-- Start your code here -->
-
-<script>
-    document.write("Это JavaScript!");
+<script src="js_01.js">
     </script>
     <hr>
     <p class="lw"> привет
